--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -16,9 +16,6 @@ div.login-container {
   width: 960px;
   margin: auto;
 }
-div.form {
-  float: right;
-}
 div.form h1 {
   margin: 0;
   margin-top: 10px;
@@ -122,15 +119,16 @@ a.login-text {
   text-decoration: none;
 }
 .module-wrapper {width: 100%;}
-.module-wrapper .module-container {width: 400px; margin: 5em auto;border: 1px solid #000;background: #333;
+.module-wrapper .module-container {width: 400px; margin: 0 auto;border: 1px solid #000;background: #333;
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 );
 -moz-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px;-moz-box-shadow: 1px 2px 5px #6e6e6e; -webkit-box-shadow: 1px 2px 5px #6e6e6e; box-shadow: 1px 2px 5px #6e6e6e;}
-.module-wrapper .module-container .padding {padding: 20px;}
+.module-wrapper .module-container .padding {padding: 10px;}
 .module-wrapper .module-container .padding input[type="text"] {width: 100%; height: 30px; border: 1px solid #000;-moz-box-shadow:inset 1px 1px 3px #6e6e6e;
 -webkit-box-shadow:inset 1px 1px 3px #6e6e6e;
 box-shadow:inset 1px 1px 3px #6e6e6e; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;}
 .module-wrapper .module-container .padding label {font-size: 22px; color: #fff;}
-.module-wrapper .module-container .padding .row {padding: 0 0 10px 0;}
+.module-wrapper .module-container .padding .row {padding: 0;}
+
 
 input[type='submit'].submit {
   -moz-box-shadow: 0px 1px 1px #000000;
@@ -157,4 +155,13 @@ input[type='submit'].submit {
   font-family: 'Patua One', cursive;
   width: 100%;
   cursor: pointer;
+  border: 1px solid #a1d54f;
+  margin-bottom: 0;
+  margin-top: 10px;
 }
+.required {color: #09f;}
+.errorMessage {color: #09f;}
+.errorSummary {display: none;}
+
+.title-wrapper {width: 400px; margin: auto; margin-top: 50px; }
+.page-title {font-size: 36px; margin-bottom: 10px;}
