--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -123,7 +123,7 @@ a.login-text {
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 );
 -moz-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px;-moz-box-shadow: 1px 2px 5px #6e6e6e; -webkit-box-shadow: 1px 2px 5px #6e6e6e; box-shadow: 1px 2px 5px #6e6e6e;}
 .module-wrapper .module-container .padding {padding: 10px;}
-.module-wrapper .module-container .padding input[type="text"] {width: 100%; height: 30px; border: 1px solid #000;-moz-box-shadow:inset 1px 1px 3px #6e6e6e;
+.module-wrapper .module-container .padding input[type="text"], .module-wrapper .module-container .padding input[type="password"] {font-size: 20px; color: #ccc; text-indent: 10px; width: 100%; height: 30px; border: 1px solid #000;-moz-box-shadow:inset 1px 1px 3px #6e6e6e;
 -webkit-box-shadow:inset 1px 1px 3px #6e6e6e;
 box-shadow:inset 1px 1px 3px #6e6e6e; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;}
 .module-wrapper .module-container .padding label {font-size: 22px; color: #fff;}
@@ -159,9 +159,13 @@ input[type='submit'].submit {
   margin-bottom: 0;
   margin-top: 10px;
 }
+.title-wrapper {width: 400px; margin: auto; margin-top: 50px; }
+.page-title {font-size: 36px; margin-bottom: 10px;}
+
 .required {color: #09f;}
 .errorMessage {color: #09f;}
 .errorSummary {display: none;}
+.note {display: none;}
+.rememberMe {margin-top: 10px;}
+.rememberMe label {font-size: 14px !important;}
 
-.title-wrapper {width: 400px; margin: auto; margin-top: 50px; }
-.page-title {font-size: 36px; margin-bottom: 10px;}
