--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -121,9 +121,18 @@ a.login-text {
 .module-wrapper {width: 100%;}
 .module-wrapper .module-container {width: 400px; margin: 0 auto;border: 1px solid #000;background: #333;
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 );
--moz-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px;-moz-box-shadow: 1px 2px 5px #6e6e6e; -webkit-box-shadow: 1px 2px 5px #6e6e6e; box-shadow: 1px 2px 5px #6e6e6e;}
+-moz-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px;-moz-box-shadow: 1px 2px 5px #e5e5e5; -webkit-box-shadow: 1px 2px 5px #e5e5e5; box-shadow: 1px 2px 5px #e5e5e5;}
 .module-wrapper .module-container .padding {padding: 10px;}
-.module-wrapper .module-container .padding input[type="text"], .module-wrapper .module-container .padding input[type="password"] {font-size: 20px; color: #ccc; text-indent: 10px; width: 100%; height: 30px; border: 1px solid #000;-moz-box-shadow:inset 1px 1px 3px #6e6e6e;
+.module-wrapper .module-container .padding input[type="text"], .module-wrapper .module-container .padding input[type="password"] {background: #eff7fc;
+background: -moz-linear-gradient(top,  #eff7fc 0%, #ffffff 37%, #ffffff 51%, #ffffff 64%, #eff7fc 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eff7fc), color-stop(37%,#ffffff), color-stop(51%,#ffffff), color-stop(64%,#ffffff), color-stop(100%,#eff7fc));
+background: -webkit-linear-gradient(top,  #eff7fc 0%,#ffffff 37%,#ffffff 51%,#ffffff 64%,#eff7fc 100%);
+background: -o-linear-gradient(top,  #eff7fc 0%,#ffffff 37%,#ffffff 51%,#ffffff 64%,#eff7fc 100%);
+background: -ms-linear-gradient(top,  #eff7fc 0%,#ffffff 37%,#ffffff 51%,#ffffff 64%,#eff7fc 100%);
+background: linear-gradient(to bottom,  #eff7fc 0%,#ffffff 37%,#ffffff 51%,#ffffff 64%,#eff7fc 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eff7fc', endColorstr='#eff7fc',GradientType=0 );
+
+font-size: 18px; font-weight: 100; font-style: italic; color: #ccc; text-indent: 10px; width: 100%; height: 30px; border: 1px solid #000;-moz-box-shadow:inset 1px 1px 3px #6e6e6e;
 -webkit-box-shadow:inset 1px 1px 3px #6e6e6e;
 box-shadow:inset 1px 1px 3px #6e6e6e; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;}
 .module-wrapper .module-container .padding label {font-size: 22px; color: #fff;}
@@ -202,4 +211,10 @@ input[type='submit'].submit {
 .note {display: none;}
 .rememberMe {margin-top: 10px;}
 .rememberMe label {font-size: 14px !important;}
+.container {position: relative;}
+.authoring-info {position: absolute; right: 50px; top: 20px;}
+.authoring-info ul {margin: 0;}
+.authoring-info ul li {list-style-type: none;}
+.authoring-info ul li a {text-decoration: none; color: #ccc; text-shadow: 1px 1px #fff;}
+.authoring-info ul li a:hover {color: #000;}
 
