--- a/application/css/main.css
+++ b/application/css/main.css
@@ -212,10 +212,15 @@ input[type='submit'].submit {
 .rememberMe {margin-top: 10px;}
 .rememberMe label {font-size: 14px !important;}
 .container {margin-top: 20px; position: relative;}
-.authoring-info {position: absolute; right: 50px; top: 20px;}
-.authoring-info ul {margin: 0;}
+.authoring-info {position: absolute; right: 0; top: 36px; background: #49C0F0 ; padding: 10px; z-index: 999; -webkit-border-bottom-right-radius: 10px;
+-webkit-border-bottom-left-radius: 10px;
+-moz-border-radius-bottomright: 10px;
+-moz-border-radius-bottomleft: 10px;
+border-bottom-right-radius: 10px;
+border-bottom-left-radius: 10px;}
+.authoring-info ul {margin: 0; padding: 0;}
 .authoring-info ul li {list-style-type: none;}
-.authoring-info ul li a {text-decoration: none; color: #ccc; text-shadow: 1px 1px #fff;}
+.authoring-info ul li a {text-decoration: none; color: #12609B;}
 .authoring-info ul li a:hover {color: #000;}
 
 table.default {background: #fff; border: 1px solid #ccc;-moz-border-radius: 5px;
@@ -248,4 +253,7 @@ background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%);
 background: linear-gradient(to bottom,  #45484d 0%,#000000 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 );
 color: #fff; width: 105px;}
+#content-2-col {background: #fff; padding: 10px;-webkit-border-radius: 10px;
+-moz-border-radius: 10px;
+border-radius: 10px;}
 
