--- a/application/css/main.css
+++ b/application/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Patua One', cursive;
-  background: #f2f2f2;
+  background: url('../images/background-image.png')no-repeat 50% 0;
 }
 .fleft {
   float: left;
@@ -111,7 +111,7 @@ h1.logo a {
   text-decoration: none;
 }
 a.login-text {
-  color: #fff;
+  color: #A1D54F;
   font-size: 14px;
   font-weight: bold;
   font-family: 'Patua One', cursive;
@@ -119,7 +119,7 @@ a.login-text {
   text-decoration: none;
 }
 .module-wrapper {width: 100%;}
-.module-wrapper .module-container {width: 400px; margin: 0 auto;border: 1px solid #000;background: #333;
+.module-wrapper .module-container {width: 400px; margin: 0 auto;border: 1px solid #000;background: #000;
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 );
 -moz-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px;-moz-box-shadow: 1px 2px 5px #e5e5e5; -webkit-box-shadow: 1px 2px 5px #e5e5e5; box-shadow: 1px 2px 5px #e5e5e5;}
 .module-wrapper .module-container .padding {padding: 10px;}
@@ -131,8 +131,7 @@ background: -o-linear-gradient(top,  #eff7fc 0%,#ffffff 37%,#ffffff 51%,#ffffff 
 background: -ms-linear-gradient(top,  #eff7fc 0%,#ffffff 37%,#ffffff 51%,#ffffff 64%,#eff7fc 100%);
 background: linear-gradient(to bottom,  #eff7fc 0%,#ffffff 37%,#ffffff 51%,#ffffff 64%,#eff7fc 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eff7fc', endColorstr='#eff7fc',GradientType=0 );
-
-font-size: 18px; font-weight: 100; font-style: italic; color: #ccc; text-indent: 10px; width: 100%; height: 30px; border: 1px solid #000;-moz-box-shadow:inset 1px 1px 3px #6e6e6e;
+font-size: 18px;color: #ccc; text-indent: 10px; width: 100%; height: 30px; border: 1px solid #000;-moz-box-shadow:inset 1px 1px 3px #6e6e6e;
 -webkit-box-shadow:inset 1px 1px 3px #6e6e6e;
 box-shadow:inset 1px 1px 3px #6e6e6e; -moz-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px;}
 .module-wrapper .module-container .padding label {font-size: 22px; color: #fff;}
@@ -212,7 +211,7 @@ input[type='submit'].submit {
 .rememberMe {margin-top: 10px;}
 .rememberMe label {font-size: 14px !important;}
 .container {margin-top: 20px; position: relative;}
-.authoring-info {position: absolute; right: 0; top: 36px; background: #49C0F0 ; padding: 10px; z-index: 999; -webkit-border-bottom-right-radius: 10px;
+.authoring-info {position: absolute; right: 5px; top: 36px; background: #49C0F0 ; padding: 10px; z-index: 999; -webkit-border-bottom-right-radius: 10px;
 -webkit-border-bottom-left-radius: 10px;
 -moz-border-radius-bottomright: 10px;
 -moz-border-radius-bottomleft: 10px;
@@ -253,7 +252,55 @@ background: -ms-linear-gradient(top,  #45484d 0%,#000000 100%);
 background: linear-gradient(to bottom,  #45484d 0%,#000000 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#45484d', endColorstr='#000000',GradientType=0 );
 color: #fff; width: 105px;}
-#content-2-col {background: #fff; padding: 10px;-webkit-border-radius: 10px;
--moz-border-radius: 10px;
-border-radius: 10px;}
+#content-2-col {}
 
+.left_col {float: left; margin-right: 10px; width: 250px; background: #333; padding: 10px;-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+border-radius: 5px;}
+#event_right_col {float: right; width: 625px; padding: 10px; background: #fff;-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+border-radius: 5px;}
+
+#event_right_col .items .event-list:nth-child(even) {background: #e5e5e5;}
+#event_right_col .items .event-list:nth-child(odd) {background: #f2f2f2; border-bottom: 1px dotted #ccc;}
+#event_right_col .summary {display: none;}
+
+.default-btn {
+  -moz-box-shadow: 0px 1px 1px #000000;
+  -webkit-box-shadow: 0px 1px 1px #000000;
+  box-shadow: 0px 1px 1px #000000;
+  background: #49c0f0;
+  background: -moz-linear-gradient(top,  #49c0f0 0%, #2cafe3 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#49c0f0), color-stop(100%,#2cafe3));
+  background: -webkit-linear-gradient(top,  #49c0f0 0%,#2cafe3 100%);
+  background: -o-linear-gradient(top,  #49c0f0 0%,#2cafe3 100%);
+  background: -ms-linear-gradient(top,  #49c0f0 0%,#2cafe3 100%);
+  background: linear-gradient(to bottom,  #49c0f0 0%,#2cafe3 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#49c0f0', endColorstr='#2cafe3',GradientType=0 );
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  padding: 5px 10px 5px 10px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #fff;
+  text-shadow: 1px 1px #006ba0;
+  text-decoration: none;
+  cursor: pointer;
+  border: 1px solid #2cafe3;
+  margin-bottom: 0;
+  display: inline-block;
+  text-align: center;
+}
+.default-btn:hover {color: #fff;}
+
+.two-col-wrapper-container {background: #000; border: 1px solid #000; padding: 10px;-webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px;}
+
+.logo-pad {color: #A1D54F ;}
+
+.edit-prof-icon {float: left; margin-right: 5px; padding: 22px 22px; background: url('../images/edit-profile-img-icon.png')0 0 no-repeat}
+.edit-profile-icon {float: left; margin-right: 5px; padding: 22px 22px; background: url('../images/edit-profile-icon.png')0 0 no-repeat}
+.account-settings-icon {float: left; margin-right: 5px; padding: 22px 22px; background: url('../images/edit-account-settings-icon.png')0 0 no-repeat}
+.event-list h3 {font-size: 22px; margin-bottom: 10px; color: #49C0F0;}
+.event-list b {font-size: 14px;}
+.success {color: #A1D54F;}
